feat: Agregar documentación Swagger para el endpoint de login y mejorar descripción de parámetros en usuarios
